// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 dqPArR"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 lodmJN"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 eDhnOi"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 iipSae"
    type="button"
  />
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 jvQSDB"
    type="button"
  />
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 dqPArR"
    type="button"
  />
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 cyPweQ"
    type="button"
  />
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
  <button
    class="Button-mdtvtf-0 ebSMkz"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="Button-mdtvtf-0 kgwVKi"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;
